--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "interstellar-web",
-  "version": "4.1.3",
-  "description": "One of the best modern web proxies.",
+  "name": "The UNBLOCKED HUB",
+  "version": "0.1.0",
+  "description": "Ending Internet Censorship Since 2023.",
   "type": "module",
   "engines": {
     "npm": ">=7.0.0",
